Refactor and optimize parsing, tokenization, and math utilities: - Simplify `joinTokensWithSingleSpaces` method logic and remove unused parameter. - Update tokenizer to use local variable for absolute-value state tracking. - Enhance iteration bounds in `BasicMath` using clamped precision logic. - Implement `Cloneable` interface in `BigNumber` with safe `clone` method. - Minor test and import cleanup.